--- a/video-and-audio.html
+++ b/video-and-audio.html
@@ -57,6 +57,8 @@
       <p class="author">The full story is <a class="download" href="https://mghkr9.wixsite.com/j2150finalproject">here</a></p>
       <p class="mengqi">You can see the lack of care for healthier options in our world today while communities build more fast food places and less farmers markets or organic restaurants. People have gotten the healthier way of life wrong and need to start understanding that eating healthier is a lifestyle choice that everyone, no matter their financial state, can make work.</p>
     </div>
+<h1 class="theme">Photo stories</h1>
+    <p id="gallery"><a href="https://beibeiliu52.wixsite.com/my-site">Here's the link to Beibei's photo gallery</a></p>
   </section>
 
   <footer>
