--- a/written-stories.html
+++ b/written-stories.html
@@ -16,7 +16,7 @@
     </ul>
     <button id="menu_trigger">☰</button>
     </nav>
-    <h1 class="theme">Written Stories & photo</h1>
+    <h1 class="theme">Written Stories</h1>
   </header>
   <section class="content">
    <div class="intro-video">
