add audio piece miguel

--- a/video-and-audio.html
+++ b/video-and-audio.html
@@ -57,6 +57,15 @@
       <p class="author">The full story is <a class="download" href="https://mghkr9.wixsite.com/j2150finalproject">here</a></p>
       <p class="mengqi">You can see the lack of care for healthier options in our world today while communities build more fast food places and less farmers markets or organic restaurants. People have gotten the healthier way of life wrong and need to start understanding that eating healthier is a lifestyle choice that everyone, no matter their financial state, can make work.</p>
     </div>
+
+    <img id="img-vegan"  width="560" height="315" src="miguel.png" alt="Screenshot of KBIA website">
+   <div class="intro-video">
+    <h2 class="text-title">Miguel Rodriguez:"you need to get out of town and know better the world"</h2>
+    <p class="author">By Beibei Liu, Becca Newton</p>
+    <p class="author">The full story is <a class="download" href="https://www.kbia.org/podcast/missouri-on-mic/2022-04-11/miguel-rodriguez-you-need-to-get-out-to-town-and-know-better-the-world">here</a></p>
+    <p class="mengqi">Miguel Rodriguez spoke with the Missouri on Mic team at the Daniel Boone Regional Library in February. He’s an interpreter from South America who spoke about his passion for traveling – and shared a few of the stories he’s gathered along the way.</p>
+  </div>
+  
 <h1 class="theme">Photo stories</h1>
     <p id="gallery"><a href="https://beibeiliu52.wixsite.com/my-site">Here's the link to Beibei's photo gallery</a></p>
   </section>
